fixed the sidebar z-index

--- a/src/app/dashboard/projects/projects.component.css
+++ b/src/app/dashboard/projects/projects.component.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 20px;
+    max-width: 80%;
 }
 
 .project-tile {
@@ -35,4 +36,8 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+}
+
+.p {
+    width: 50%
 }
