--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -12,7 +12,7 @@
     width: 260px;
     height: 100%;
     background-color: #4C729C;
-    z-index: -1;
+    z-index: 10;
 }
 
 .sidebar .upload-container {
