--- a/src/styles.css
+++ b/src/styles.css
@@ -7,21 +7,21 @@
     padding: 20px;
     /* Optional: Add padding if needed */
 }
-
+/* 
 body {
     height: 100%;
     margin: 0;
     overflow-y: scroll;
     /* Enable vertical scrollbar */
-    scroll-padding-top: 75px;
+    /* scroll-padding-top: 75px; */
     /* Adjust this value to match the height of your navbar */
-}
 
 
-/* scrollbar */
+
+
 
 /* For WebKit browsers (Chrome, Safari, etc.) */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 8px;
 }
 
@@ -36,10 +36,10 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
-}
+} */
 
 /* For Firefox */
-* {
+/* * {
     scrollbar-width: thin;
     scrollbar-color: #888 #f1f1f1;
-}
+}  */
